@@ -11,6 +11,7 @@ fakechroot (2.7-0) unstable; urgency=medium
       Closes: #477447.
     - Fixed execve(2) function to not expand argv0 and handle "#!" correctly.
       Thanks Mark Eichin.  Closes: #412774.
+    - New eaccess(3) function backported from Klik.
   * test/fakechroot.sh:
     - Add cp, mkdir, chmod, rm.
     - Call bash instead of sh.
